# university-projects

./: .gitignore  CMakeLists.txt  GraphsContainer.cpp  GraphsContainer.h  README.md  gamedialog.ui  graphBasedGameqQT.pro  graphs.cpp  graphwidget.cpp  graphwidget.h  index.html  levels.txt  main.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  subtree-merge.sh
algorithms-and-data-structures/algorithms-practice/: CMakeLists.txt
algorithms-and-data-structures/doubly-linked-list-implementation/: CMakeLists.txt
algorithms-and-data-structures/graphs-implementation/: Graphs.cpp  (+2 more)
algorithms-practice/: README.md
assembler-practice/: .gitignore  functions.asm
assembler-practice/project1/: .gitignore  CMakeLists.txt  README.md  main.cpp
c-sharp-course/: .gitignore  README.md  c-sharp-course.sln
design-patterns/: README.md
doubly-linked-list-implementation/: .gitignore  README.md  main.cpp
graphs-game/: edge.cpp  edge.h  gamedialog.cpp  gamedialog.h  graphBasedGameqQT_en_US.ts  graphs.h  mainwindow.cpp
graphs-implementation/: CMakeLists.txt  Graphs.h  GraphsContainer.cpp  README.md
internet-technologies-lab-works/: README.md  index.html  nginx.conf.template  setup-nginx-config.sh
ipc-lab-work1/: framework.h
java-course/: .gitignore  README.md
matrix-implementation/: README.md
merge-and-radix-sorts/: CMakeLists.txt  README.md
prime-tests-and-factorization/: main.cpp
python-course/: .gitignore  README.md
sorting-algorithms-bench/: .gitignore  CMakeLists.txt  README.md  main.cpp
web-development-course/: .gitignore  README.md  nginx.conf.template
(+457 files in other folders)
